--- a/Main/Views/ExceptionPopUp.xaml
+++ b/Main/Views/ExceptionPopUp.xaml
@@ -1,15 +1,12 @@
 ﻿<adonisControls:AdonisWindow x:Class="Main.Views.ExceptionPopUp"
                              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                             xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
                              xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
-                             mc:Ignorable="d"
+                             xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+                             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                             Background="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}"
                              Title="Visual Ternera - Alerta de Error"
                              Height="400"
                              Width="500"
-                             Background="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}"
                              WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -18,24 +15,24 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Ocurrio el siguiente error en el sistema:"
+        <TextBlock FontSize="16"
+                   FontWeight="Regular"
                    Margin="5"
-                   FontSize="16"
-                   FontWeight="Regular" />
+                   Text="Ocurrio el siguiente error en el sistema:" />
 
-        <TextBlock Grid.Row="1"
-                   x:Name="errorMessage"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   TextWrapping="Wrap"
+        <TextBlock x:Name="errorMessage"
+                   Grid.Row="1"
                    FontSize="24"
-                   FontWeight="DemiBold" />
+                   FontWeight="DemiBold"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   TextWrapping="Wrap" />
 
-        <Button Grid.Row="2"
-                x:Name="okButton"
-                Click="okButton_Click"
-                Margin="5"
+        <Button x:Name="okButton"
+                Grid.Row="2"
+                Click="Confirm"
+                Content="Okay"
                 FontSize="16"
-                Content="Okay" />
+                Margin="5" />
     </Grid>
 </adonisControls:AdonisWindow>
