--- a/Editor/Views/Preview.xaml
+++ b/Editor/Views/Preview.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="Editor.Views.Preview"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-             xmlns:core="clr-namespace:Core.ViewLogic;assembly=Core"
+             xmlns:coreControls="clr-namespace:Core.Controls;assembly=Core"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -46,15 +46,15 @@
                     VerticalAlignment="Center" />
         </DockPanel>
 
-        <core:ZoomBorder Grid.Row="1"
-                         Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
-                         BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer4BorderBrush}}"
-                         BorderThickness="2"
-                         ClipToBounds="True"
-                         Margin="5">
+        <coreControls:ZoomBorder Grid.Row="1"
+                                 Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
+                                 BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer4BorderBrush}}"
+                                 BorderThickness="2"
+                                 ClipToBounds="True"
+                                 Margin="5">
             <Image SnapsToDevicePixels="True"
                    Source="{Binding PreviewImage}" />
-        </core:ZoomBorder>
+        </coreControls:ZoomBorder>
 
         <DockPanel Grid.Row="2"
                    LastChildFill="False"
