--- a/Editor/Views/Tree.xaml
+++ b/Editor/Views/Tree.xaml
@@ -1,6 +1,6 @@
 ﻿<UserControl x:Class="Editor.Views.Tree"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:core="clr-namespace:Core.ViewLogic;assembly=Core"
+             xmlns:core="clr-namespace:Core.FileTree;assembly=Core"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
